Camlp5 Version 6.18:
--------------------

* [07 Dec 16] Fixed bug not separated idents were not allowed in
  'let open' constructs. Bug notified by Kadadu.
  Ex: "let open Mod1.Mod2.Mod3 in ..."
* [06 Dec 16] Fixed bug dumping module definitions with constraints.
  Bug notified by Kakadu.
  Ex:
    module type Item = sig type t end
    module type Sig = sig type t module Node : Item end
    module Make (S : Sig) : Sig with module Node = S.Node and type t = S.t
* [06 Dec 16] Fixed bug extra option word during pr_dump for optional args.
  Bug notified by Kakadu.
  Ex: "class t : ?name:string -> object end"
* [05 Dec 16] Fixed bug dumping of open object types. Bug notified by Kakadu.
  Ex: "type t = <f:int; .. >"
* [05 Dec 16] Fixed bug dump parsetree without throughing away module type
  annotation. Bug notified by Kakadu.
  Ex: "module rec A : sig end = struct end"

Camlp5 Version 6.17:
--------------------

* [09 Sep 16] Added pretty print of type [< ... ] when ended with "> `ident".
* [24 Jul 16] Added compatibility with ocaml 4.04.0 and 4.04.1.
* [24 Jul 16] Added compatibility with ocaml 4.03.1.

Camlp5 Version 6.16:
--------------------

* [28 Apr 16] Fixed problems of compatibility with previous versions of
  ocaml.

Camlp5 Version 6.15:
--------------------

* [23 Jan 16] Fixed bug on optional types (ocaml 4.02).
* [15 Jan 16] Fixed bug on methods wrongly interpreted as vals.
* [05 Jan 16] Updated for ocaml trunk 4.03.0
  (git version be2a7e2f830911b331657b8cfa462f5219dfec5b)
* [26 Nov 15] Updated again for ocaml trunk current version (4.03.0).
* [23 Sep 15] Updated for ocaml trunk current version (4.03.0).

Camlp5 Version 6.14:
--------------------

* [30 Jul 15] Updated for ocaml version 4.02.3 and 4.02.4

Camlp5 Version 6.13:
--------------------

* [20 Apr 15] Accept 'fun/try' case list like the change of 22nd Apr 13
  on 'match' in revised syntax, allowing them to write "|" .. "end" or
  "[" .. "]", both being accepted.